fixes
Fixed overlapping links buttons

--- a/Project/project.css
+++ b/Project/project.css
@@ -1,6 +1,7 @@
 * {
     text-decoration: none;
     box-sizing: border-box;
+    overflow-x: hidden;
     border: 0;
     padding: 0;
     margin: 0;
@@ -42,6 +43,17 @@ body > *:not(h1) {
     background-color: rgb(81, 0, 156);
     border-radius: 5px;
     padding: 8px 16px;
+}
+
+@media only screen and (width <= 600px) {
+    #skola > a {
+        display: flex;
+        flex-direction: column;
+        margin-right: 10px;
+        background-color: rgb(81, 0, 156);
+        border-radius: 5px;
+        padding: 8px 16px;
+    }
 }
 
 #skola > a:hover {
